@@ -20940,11 +20940,36 @@ void menu_setting_ay_piano_grafico(MENU_ITEM_PARAMETERS)
 	setting_mostrar_ay_piano_grafico.v ^=1;
 }
 
-void menu_audio_specdrum(MENU_ITEM_PARAMETERS)
+void menu_audio_audiodac(MENU_ITEM_PARAMETERS)
 {
-	specdrum_enabled.v ^=1;
+	audiodac_enabled.v ^=1;
 }
 
+void menu_audio_audiodac_type(MENU_ITEM_PARAMETERS)
+{
+	audiodac_selected_type++;
+	if (audiodac_selected_type==MAX_AUDIODAC_TYPES) audiodac_selected_type=0;
+}
+
+void menu_audio_audiodac_set_port(MENU_ITEM_PARAMETERS)
+{
+	char string_port[4];
+
+	sprintf (string_port,"0");
+
+	menu_ventana_scanf("Port Value",string_port,4);
+
+	int valor_port=parse_string_to_number(string_port);
+
+	if (valor_port<0 || valor_port>255) {
+					debug_printf (VERBOSE_ERR,"Invalid value %d",valor_port);
+					return;
+	}
+
+	audiodac_types[MAX_AUDIODAC_TYPES-1].port=valor_port;
+	audiodac_selected_type=MAX_AUDIODAC_TYPES-1;
+
+}
 
 void menu_audio_beeper(MENU_ITEM_PARAMETERS)
 {
@@ -21024,7 +21049,15 @@ void menu_settings_audio(MENU_ITEM_PARAMETERS)
 
 
 		if (MACHINE_IS_SPECTRUM) {
-			menu_add_item_menu_format(array_menu_settings_audio,MENU_OPCION_NORMAL,menu_audio_specdrum,NULL,"Specdrum: %s",(specdrum_enabled.v ? "On" : "Off" ));
+			menu_add_item_menu_format(array_menu_settings_audio,MENU_OPCION_NORMAL,menu_audio_audiodac,NULL,"DAC: %s",(audiodac_enabled.v ? "On" : "Off" ));
+			if (audiodac_enabled.v) {
+				menu_add_item_menu_format(array_menu_settings_audio,MENU_OPCION_NORMAL,menu_audio_audiodac_type,NULL,"Type: %s P: %02XH",
+					audiodac_types[audiodac_selected_type].name,audiodac_types[audiodac_selected_type].port);
+
+				menu_add_item_menu_format(array_menu_settings_audio,MENU_OPCION_NORMAL,menu_audio_audiodac_set_port,NULL,"Set custom port");
+
+
+			}
 		}
 
 
